--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "with out cra",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode=development --open --hot",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "test": "jest"
   },
   "author": "hsutinghuan",
   "license": "ISC",
   "dependencies": {
+    "also": "0.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -18,9 +19,16 @@
     "@babel/core": "^7.17.2",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^17.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
