--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "archer-react-app",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "react-app with out cra command",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,6 @@
   "author": "hsutinghuan",
   "license": "ISC",
   "dependencies": {
-    "also": "0.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -45,5 +44,13 @@
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/s780609/react-app"
+  },
+  "bugs": {
+    "url": "https://github.com/s780609/react-app/issues"
+  },
+  "homepage": "https://github.com/s780609/react-app#readme"
 }
