--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "hsutinghuan",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
