--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "hsutinghuan",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.17.2",
     "@reduxjs/toolkit": "^1.7.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.2",
